update tcp copy and tcp dump

--- a/docs/02.后端技术/00.Linux/01.流量复制技术-tcpcopy.md
+++ b/docs/02.后端技术/00.Linux/01.流量复制技术-tcpcopy.md
@@ -12,38 +12,38 @@ author:
   link: https://github.com/zhangliang6666
 ---
 
-> TCPCopy 是一个 TCP 流重放工具，支持互联网服务器应用程序的实际测试
+> TCPCopy 是一个 TCP 流转发工具，支持互联网服务器应用程序的实际测试
 <!-- more -->
 ## 一、简介
 * 背景：线上流量过于复杂，难以模拟出真实的请求对线上服务进行测试；
 * TCPCopy 作为一个实时流重放工具，能够生成类似于生产环境的流量；
-* TCPCopy 是**对 tcp 包进行转发，与应用层协议无关**，mysql、redis、protobuf等都可以转发；
-* TCPCopy 除了**占用额外的 CPU、内存和带宽外**，对生产系统几乎没有影响；
+* TCPCopy 是<span style="color: red;">**对 tcp 包进行转发，与应用层协议无关**</span>，mysql、redis、protobuf等都可以转发；
+* TCPCopy 除了<span style="color: red;">**占用额外的 CPU、内存和带宽外**</span>，对生产系统几乎没有影响；
 * 复制工作负载在请求多样性、网络延迟和资源占用方面与生产工作负载相似。
 
 ## 二、应用场景
-* 分布式压力测试：
+* **分布式压力测试**：
   * 使用 TCPCopy 复制真实数据，对服务器软件进行压力测试，可以找到只能在高压力情况下产生的错误；
-* 稳定性测试：
+* **稳定性测试**：
   * 证明新系统是稳定的，并找到只发生在生产环境中的错误；
-* 回归测试：
+* **回归测试**：
   * 利用 TCPCopy 复制生产流量，复现bug问题；
-* 性能比较
+* **性能比较**：
   * 利用 TCPCopy 复制或放大生产流量，验证新版本性能是否达标；
 
 ## 三、架构设计
 ![架构图](/img/tcpcopy.png)
 
-* TCPCOPY 默认使用**原始套接字输入技术**在**网络层**捕获在线数据包并进行必要的处理（包括TCP交互模拟、网络延迟控制和常见的上层交互模拟），并默认使用**原始套接字输出技术**将数据包发送到目标服务器（图中用粉红色箭头表示）；
+* TCPCOPY 默认使用**原始套接字输入技术**在<span style="color: red;">**网络层**</span>捕获在线数据包并进行必要的处理（包括TCP交互模拟、网络延迟控制和常见的上层交互模拟），并默认使用**原始套接字输出技术**将数据包发送到目标服务器（图中用粉红色箭头表示）；
 * TCPCopy 由两部分组成：tcpcopy 和 intercept；
-  * tcpcopy 运行在线上服务器，对真实请求的 tcp 包进行复制并转发到目标服务器上；
-  * intercept 运行在助理服务器上，执行一些辅助工作，例如将目标服务器的响应信息传递给 tcpcopy；
-* 目标服务器上唯一需要的操作是设置适当的路由命令，以将响应数据包（图中的绿色箭头所示）路由到助理服务器；
-* intercept 将提取响应标头信息，并使用特殊通道将响应标头发送到 tcpcopy（图中紫色箭头所示）；
-* tcpcopy 收到响应标头时，它会利用标头信息修改联机数据包的属性，并继续发送另一个数据包；
-* 应该注意的是，来自目标服务器的响应被路由到助理服务器，该服务器应该充当**黑洞**；
+  * tcpcopy 运行在<span style="color: red;">**线上**</span>服务器，对真实请求的 tcp 包进行复制并转发到<span style="color: red;">**目标**</span>服务器上；
+  * intercept 运行在<span style="color: red;">**辅助**</span>服务器上，执行一些辅助工作，例如将目标服务器的响应信息传递给 tcpcopy；
+  * intercept 将提取响应标头信息，并使用特殊通道将响应标头发送到 tcpcopy（图中紫色箭头所示）；
+  * tcpcopy 收到响应标头时，它会利用标头信息修改联机数据包的属性，并继续发送另一个数据包；
+* 目标服务器上唯一需要的操作是设置适当的<span style="color: red;">**路由**</span>命令，以将响应数据包（图中的绿色箭头所示）路由到<span style="color: red;">**辅助**</span>服务器；
+* 应该注意的是，来自目标服务器的响应被路由到辅助服务器，该服务器应该充当**黑洞**；
 
-## 四、快速入门
+## 四、安装与说明
 ### 1，线上机器上安装 tcpcopy
 ```bash
  wget https://github.com/session-replay-tools/tcpcopy/archive/1.0.0.tar.gz
@@ -53,186 +53,122 @@ author:
  make
  make install
 ```
-### 2，助理机器上安装 intercept
+### 2，tcpcopy 常用选项
+<!-- 。例如，'。/tcpcopy -x 80192.168.0.2:18080'将把当前服务器上端口'80'的请求复制到目标IP '192.168.0.2'的目标端口'18080'。 -->
+<!-- 。例如，'./tcpcopy -x 8080-192.168.0.2:8080 -c 62.135.200.x'将从当前在线服务器的端口'8080'复制请求到目标服务器'192.168.0.2'的目标端口'8080'，并将客户端IP修改为net 62.135.200.0/24 之一 -->
+<!-- 。例如，'。/tcpcopy -x 80-192.168.0.2:8080 -n 3'将从当前服务器的80端口复制数据流，生成比源数据大三倍的数据流，并将这些请求发送到'192.168.0.2'上的目标端口8080 -->
+
+选项|含义
+----|----
+`-x <transfer,>` |  <span style="color: red;">**指定源服务器和目标服务器的ip和端口**</span>，`<transfer，>`的格式可以为：`sourceIP:sourcePort-targetIP:targetPort，…`，大多数情况下，sourceIP可以省略，两个'transfer'由'，'(逗号)分隔
+`-H <ip_addr>`   |  将本地主机的IP地址更改为给定的IP地址
+`-c <ip_addr,>`  |  <span style="color: red;">**发送到目标服务器时**</span>，将客户端IP地址更改为IP地址之一
+`-n <num>`       |  <span style="color: red;">**设置流量复制倍数**</span>，最大值为 1023。由于多次复制是基于修改端口号进行的，因此可能会出现端口冲突的情况，特别是在内网应用中，源ip很少，连接时间较短。因此复制倍数越小，tcpcopy将执行得更好
+`-f <num>`       |  当运行多个tcpcopy实例时，使用此参数控制端口号修改进程，减少端口冲突。对于不同的tcpcopy实例，`<num>` 的值应该不同，允许的最大值是1023
+`-m <num>`       |  <span style="color: red;">**设置tcpcopy允许使用的最大内存(以兆为单位)**</span>，防止tcpcopy占用过多内存，影响在线系统。当内存超过这个限制时，tcpcopy 将自动退出。该参数仅在内核版本为2.6.32及以上时有效。默认为1024
+`-M <num>`       |  MTU，最大传输单元，数据链路层能够传输的最大网络包大小，默认 1500)
+`-D <num>`       |  MSS，最大分段尺寸，网络包能够装下最大报文大小，默认 1460
+`-R <num>`       |  设置默认的 rtt 值
+`-U <num>`       |  设置用户会话池大小，单位为千字节，默认为 1，最大 63
+`-C <num>`       |  tcpcopy 与 intercept 之间的并发连接数，默认为 2，最大值为 11
+`-s <server,>`   |  <span style="color: red;">**intercept 服务列表**</span>，形如：ip_addr1:port1, ip_addr2:port2, ...
+`-t <num>`       |  设置会话的超时时间。在超时时间后 tcpcopy 还没收到目标服务器的返回，该会话将被丢弃。当来自目标服务器的响应较慢或应用程序协议基于上下文时，应该设置更大的值。默认值 120 seconds.
+`-k <num>`       |  设置会话保持的超时时间
+`-l <file>`      |  设置日志文件
+`-r <num>`       |  设置会话传输百分比 (integer range:1~100)
+`-p <num>`       |  设置目标服务器的监听端口，默认值 36524.
+`-P <file>`      |  设置 pid 存储的文件，仅用于 -d 选项下
+`-O`             |  仅回放全会话
+`-g`             |  慢慢回放 gradully
+`-v`             |  版本
+`-h`             |  打印帮助并退出
+`-d`             |  以守护进程的方式运行
+
+### 3，辅助机器上安装 intercept
 ```bash
  yum -y install libpcap-devel # 在Unix-like系统上捕获网络数据包的库
  wget https://github.com/session-replay-tools/intercept/archive/1.0.0.tar.gz
  tar -zxf 1.0.0.tar.gz
  cd intercept-1.0.0
- ./configure --prefix=/opt/tcpcopy/ # 和上面目录一致
+ ./configure --prefix=/opt/tcpcopy/
  make
  make install
 ```
-<!-- 
-配置拦截选项
---single            run intercept at non-distributed mode
---with-pfring=PATH  set path to PF_RING library sources
---with-debug        compile intercept with debug support (saved in a log file)
 
-配置 tcpcopy 的选项
---offline                   replay TCP streams from the pcap file
---pcap-capture              capture packets at the data link
---pcap-send                 send packets at the data link layer instead of the IP layer
---with-pfring=PATH          set path to PF_RING library sources
---set-protocol-module=PATH  set tcpcopy to work for an external protocol module
---single                    if intercept and tcpcopy are both configured with "--single" option, 
-                            only one tcpcopy works together with intercept, 
-                            and better performance is achieved.
---with-tcmalloc             use tcmalloc instead of malloc
---with-debug                compile tcpcopy with debug support (saved in a log file)
-运行 TCPCopy
-假设 tcpcopy 和 intercept 都配置了“./configure”。
-
-1） 在运行服务器应用程序的目标服务器上：
-  Set route commands appropriately to route response packets to the assistant server
-
-  For example:
-
-     Assume 61.135.233.161 is the IP address of the assistant server. We set the 
-     following route command to route all responses to the 62.135.200.x's clients 
-     to the assistant server.
-
-       route add -net 62.135.200.0 netmask 255.255.255.0 gw 61.135.233.161
-2） 在运行拦截的助手服务器上（需要 root 权限或CAP_NET_RAW功能）：
-   ./intercept -F <filter> -i <device,>
-   
-   Note that the filter format is the same as the pcap filter.
-   For example:
-   
-      ./intercept -i eth0 -F 'tcp and src port 8080' -d
-      
-      intercept will capture response packets of the TCP based application which listens
-      on port 8080 from device eth0 
-3） 在联机源服务器上（需要 root 权限或CAP_NET_RAW功能）：
-  ./tcpcopy -x localServerPort-targetServerIP:targetServerPort -s <intercept server,> 
-  [-c <ip range,>]
-  
-  For example(assume 61.135.233.160 is the IP address of the target server):
-
-    ./tcpcopy -x 80-61.135.233.160:8080 -s 61.135.233.161 -c 62.135.200.x
-    
-    tcpcopy would capture port '80' packets on current server, change client IP address 
-    to one of 62.135.200.x series, send these packets to the target port '8080' of the 
-    target server '61.135.233.160', and connect 61.135.233.161 for asking intercept to 
-    pass response packets to it.
-    
-    Although "-c" parameter is optional, it is set here in order to simplify route 
-    commands.
-注意
-它仅在Linux上进行测试（内核2.6或更高版本）
-TCPCopy 可能会丢失数据包，从而丢失请求
-需要根权限或CAP_NET_RAW功能（例如setcap CAP_NET_RAW=ep tcpcopy）
-TCPCopy 现在仅支持客户端启动的连接
-TCPCopy 不支持使用 SSL/TLS 的服务器应用程序的重放
-有关 MySQL 会话重播，请参阅 https://github.com/session-replay-tools
-不应在助理服务器上设置ip_forward
-请执行 “./tcpcopy -h” 或 “./intercept -h” 以获取更多详细信息。
-影响因素
-有几个因素可能会影响TCPCopy，这将在以下各节中详细介绍。
-
-1. 捕获界面
-默认情况下，TCPcopy 利用原始套接字输入接口在联机服务器上的网络层捕获数据包。系统繁忙时，系统内核可能会丢失一些数据包。
-
-如果使用“--pcap-capture”配置 tcpcopy，则 tcpcopy 可以在数据链路层捕获数据包，也可以过滤内核中的数据包。使用 PF_RING，tcpcopy 在使用 pcap 捕获时会丢失更少的数据包。
-
-也许捕获请求的最佳方法是通过交换机镜像入口数据包，然后通过负载均衡器将巨大的流量划分到多台计算机。
-
-2. 发送接口
-默认情况下，TCPcopy 利用原始套接字输出接口将网络层的数据包发送到目标服务器。 如果要避免ip_conntrack问题或获得更好的性能，请使用“--pcap-send”配置 tcpcopy，然后使用适当的参数，tcpcopy 可以在数据链路层将数据包发送到目标服务器。
-
-3.在前往目标服务器的途中
-当数据包通过 tcpcopy 发送时，在到达目标服务器之前可能会遇到许多挑战。由于数据包中的源IP地址仍然是最终用户的IP地址（默认情况下），而不是在线服务器的IP地址，因此某些安全设备可能会将其视为无效或伪造的数据包并将其丢弃。在这种情况下，当您使用 tcpdump 捕获目标服务器上的数据包时，不会捕获来自预期最终用户的数据包。要了解您是否处于这种情况，您可以选择同一网段中的目标服务器进行测试。如果数据包可以在同一网段中成功发送到目标服务器，但跨网段未成功发送，则数据包可能会中途丢弃。
-
-为了解决这个问题，我们建议在同一网段的服务器上部署tcpcopy，目标应用程序和拦截。在同一网段中的代理的帮助下，还有另一种解决方案。TCPcopy 可以将数据包发送到代理，然后代理会将相应的请求发送到另一个网段中的目标服务器。
-
-请注意，在同一段中的一个虚拟机上部署目标服务器的应用程序可能会面临上述问题。
-
-4. 目标服务器的操作系统
-目标服务器可以设置 rpfilter，这将检查数据包中的源 IP 地址是否是伪造的。如果是，数据包将在网络层丢弃。
-
-如果目标服务器无法接收任何请求，尽管目标服务器上的 tcpdump 可以捕获数据包，则应检查是否有任何相应的 rpfilter 设置。如果设置，则必须删除相关设置，以使数据包通过网络层。
-
-还有其他原因导致 tcpcopy 无法正常工作，例如 iptables 设置问题。
-
-5. 目标服务器上的应用程序
-目标服务器上的应用程序可能无法及时处理所有请求。一方面，应用程序中的错误可能会使请求长时间没有响应。另一方面，TCP 层以上的某些协议可能只处理套接字缓冲区中的第一个请求，而将套接字缓冲区中的剩余请求保留为未处理。
-
-6. 助理服务器的操作系统
-您不应ip_forward设置为 true，否则助理服务器无法充当黑洞。
-
--x <transfer,> use <transfer,> to specify the IPs and ports of the source and target
-               servers. Suppose 'sourceIP' and 'sourcePort' are the IP and port
-               number of the source server you want to copy from, 'targetIP' and
-               'targetPort' are the IP and port number of the target server you want
-               to send requests to, the format of <transfer,> could be as follows:
-               'sourceIP:sourcePort-targetIP:targetPort,...'. Most of the time,
-               sourceIP could be omitted and thus <transfer,> could also be:
-               'sourcePort-targetIP:targetPort,...'. As seen, the IP address and the
-               port number are segmented by ':' (colon), the sourcePort and the
-               targetIP are segmented by '-', and two 'transfer's are segmented by
-               ',' (comma). For example, './tcpcopy -x 80-192.168.0.2:18080' would
-               copy requests from port '80' on current server to the target port
-               '18080' of the target IP '192.168.0.2'.
--H <ip_addr>   change the localhost IP address to the given IP address
--c <ip_addr,>  change the client IP to one of IP addresses when sending to the
-               target server. For example,
-               './tcpcopy -x 8080-192.168.0.2:8080 -c 62.135.200.x' would copy
-               requests from port '8080' of current online server to the target port
-               '8080' of target server '192.168.0.2' and modify the client IP to be
-               one of net 62.135.200.0/24.
--n <num>       use <num> to set the replication times when you want to get a
-               copied data stream that is several times as large as the online data.
-               The maximum value allowed is 1023. As multiple copying is based on
-               port number modification, the ports may conflict with each other,
-               in particular in intranet applications where there are few source IPs
-               and most connections are short. Thus, tcpcopy would perform better
-               when less copies are specified. For example,
-               './tcpcopy -x 80-192.168.0.2:8080 -n 3' would copy data flows from
-               port 80 on the current server, generate data stream that is three
-               times as large as the source data, and send these requests to the
-               target port 8080 on '192.168.0.2'.
--f <num>       use this parameter to control the port number modification process
-               and reduce port conflications when multiple tcpcopy instances are
-               running. The value of <num> should be different for different tcpcopy
-               instances. The maximum value allowed is 1023.
--m <num>       set the maximum memory allowed to use for tcpcopy in megabytes,
-               to prevent tcpcopy occupying too much memory and influencing the
-               online system. When the memory exceeds this limit, tcpcopy would quit
-               automatically. The parameter is effective only when the kernel
-               version is 2.6.32 or above. The default value is 1024.
--M <num>       MTU value sent to backend (default 1500)
--D <num>       MSS value sent back(default 1460)
--R <num>       set default rtt value
--U <num>       set user session pool size in kilobytes(default 1).
-               The maximum value allowed is 63.
--C <num>       | parallel connections between tcpcopy and intercept.
-               The maximum value allowed is 11(default 2 connections).
--s <server,>   intercept 服务列表，形如：ip_addr1:port1, ip_addr2:port2, ...
--t <num>       |  设置会话的超时时间。在超时时间后 tcpcopy 还没收到目标服务器的返回，该会话将被丢弃。当来自目标服务器的响应较慢或应用程序协议基于上下文时，应该设置更大的值。默认值 120 seconds.
--k <num>       |  设置会话保持的超时时间
--l <file>      |  设置日志文件
--r <num>       |  设置会话传输百分比 (integer range:1~100)
--p <num>       |  设置目标服务器的监听端口，默认值 36524.
--P <file>      |  设置 pid 存储的文件，仅用于 -d 选项下
--O             |  仅回放全会话
--g             |  慢慢回放 gradully
--v             |  版本
--h             |  打印帮助并退出
--d             |  以守护进程的方式运行
-
-
- -->
-
+### 4，intercept 常用选项
 选项|含义
 ----|----
- -i <device,>  |  要侦听的接口的名称，通常是驱动程序名称后面跟着一个单元号，例如，第一个以太网接口为eth0
--F <filter>    |  过滤规则(和 pcap 规则一样)
--n <num>       |  设置最大合并包的数量
--p <num>       |  设置监听的 TCP 端口号，默认 36524
--s <num>       |  为 intercept 设置哈希表的尺寸，默认 65536
--l <file>      |  设置日志文件
--P <file>      |  设置 pid 存储的文件，仅用于 -d 选项下
--b <ip_addr>   |  监听接口 (默认 INADDR_ANY, 所有地址)
--v             |  版本
--h             |  打印帮助并退出
--d             |  以守护进程的方式运行
+`-i <device,>`   |  <span style="color: red;">**要侦听的网卡接口名称**</span>，通常是驱动程序名称后面跟着一个单元号，例如，第一个以太网接口为eth0
+`-F <filter>`    |  <span style="color: red;">**过滤规则**</span>(和 pcap 规则一样)
+`-n <num>`       |  设置最大合并包的数量
+`-p <num>`       |  设置监听的 TCP 端口号，默认 36524
+`-s <num>`       |  为 intercept 设置哈希表的尺寸，默认 65536
+`-l <file>`      |  设置日志文件
+`-P <file>`      |  设置 pid 存储的文件，仅用于 -d 选项下
+`-b <ip_addr>`   |  监听接口 (默认 INADDR_ANY, 所有地址)
+`-v`             |  版本
+`-h`             |  打印帮助并退出
+`-d`             |  以守护进程的方式运行
+
+## 五、快速入门
+* 假设 “61.135.233.160” 为目标服务器的 IP 地址；
+* 假设 “61.135.233.161” 为辅助服务器的 IP 地址；
+### 1，目标服务器设置路由
+* 设置适当的路由命令，将目标服务器的响应报文路由到辅助服务器；
+```sh
+# 执行 route 命令将所有对 “62.135.200.x” 客户端的响应路由到辅助服务器 “61.135.233.161”
+route add -net 62.135.200.0 netmask 255.255.255.0 gw 61.135.233.161
+```
+
+### 2，辅助服务器运行 intercept
+* 在辅助服务器上运行 intercept，需要 root 权限或CAP_NET_RAW功能；
+```sh
+# 监听 eth0 网卡，监听 8080 端口的 tcp 包，以守护进程的方式运行
+./intercept -i eth0 -F 'tcp and src port 8080' -d
+```
+
+### 3，线上服务器运行 tcpcopy
+```sh
+# 捕获当前服务器上 “80” 端口数据包，更改客户端IP地址为 “62.135.200.x" 中的一个
+# 将这些数据包发送到目标服务器 ”61.135.233.160“ 的 ”8080“
+# 连接辅助服务器 “61.135.233.161”，将响应数据包传递给 intercept
+# ”-c" 参数是可选的，设置它是为了简化路由命令
+./tcpcopy -x 80-61.135.233.160:8080 -s 61.135.233.161 -c 62.135.200.x
+```
+
+## 六、注意事项
+* 仅在 Linux 上测试通过（内核2.6或更高版本）；
+* TCPCopy 可能会丢失数据包，从而丢失请求；
+* 需要 `root` 权限或 `CAP_NET_RAW` 功能（例如`setcap CAP_NET_RAW=ep tcpcopy`）
+* TCPCopy 现在仅支持客户端启动的连接；
+* TCPCopy 不支持使用 `SSL/TLS` 的服务器应用程序的重放；
+* 有关 MySQL 会话重播，请参阅 https://github.com/session-replay-tools；
+* 不应该辅助服务器上设置 `ip_forward` 为 true，否则无法充当黑洞；
+
+## 七、可能存在的问题
+### 1，捕获接口
+* 默认情况下，TCPcopy 利用原始套接字输入接口在线上服务器上的网络层捕获数据包，系统繁忙时，系统内核可能会丢失一些数据包；
+* 在执行 tcpcopy 的 `./configure` 时，如果使用 `--pcap-capture` 配置，则 tcpcopy 可以在数据链路层捕获数据包，也可以过滤内核中的数据包；
+* 使用 `PF_RING`，tcpcopy 在使用 pcap 捕获时会丢失更少的数据包；
+* 捕获请求的最佳方法是通过交换机镜像入口数据包，然后通过负载均衡器将巨大的流量划分到多台机器；
+
+### 2. 发送接口
+* 默认情况下，TCPcopy 利用原始套接字输出接口将网络层的数据包发送到目标服务器；
+* 如果要避免 `ip_conntrack` 问题或获得更好的性能，在执行 tcpcopy 的 `./configure` 时，如果使用 `--pcap-send` 配置，然后使用适当的参数，tcpcopy 可以在数据链路层将数据包发送到目标服务器；
+
+### 3，在前往目标服务器的途中
+* 当数据包通过 tcpcopy 发送时，默认情况下，数据包中的源IP地址仍然是终端用户的IP地址，而不是在线服务器的IP地址，某些安全设备可能会将其视为无效或伪造的数据包并将其丢弃；
+* 在这种情况下，使用 tcpdump 捕获目标服务器上的数据包时，不会捕获来自期待的终端用户的数据包；
+* 要了解是否处于这种情况，可以选择同一网段中的目标服务器进行测试，如果数据包可以在同一网段中成功发送到目标服务器，但跨网段未成功发送，则数据包可能会中途丢弃；
+* 为了解决这个问题，<span style="color: red;">**建议在同一网段的服务器上部署 tcpcopy、intercept 和目标应用程序**</span>；
+* 在同一网段中的代理的帮助下，TCPcopy 可以将数据包发送到代理，然后代理将相应的请求发送到另一个网段中的目标服务器；
+
+### 4，目标服务器的操作系统
+* 目标服务器如果设置了 `rpfilter`，将检查数据包中的源 IP 地址是否是伪造的，如果是，数据包将在<span style="color: red;">**网络层**</span>丢弃；
+* 如果目标服务器上的 tcpdump 可以捕获数据包，服务却无法收到请求，则应检查是否有任何相应的 `rpfilter` 设置，如果设置，则必须删除相关设置，以使数据包通过网络层；
+* 还有其他原因导致 tcpcopy 无法正常工作，例如 iptables 设置问题；
+
+### 5，目标服务器上的服务
+* 目标服务器上的服务可能无法及时处理所有请求；
+* 一方面，服务中的错误可能会使请求长时间没有响应；
+* 另一方面，TCP 层以上的某些协议可能只处理套接字缓冲区中的第一个请求，而将套接字缓冲区中的剩余请求保留为未处理；
