--- a/docs/02.后端技术/00.Linux/01.流量复制技术-tcpcopy.md
+++ b/docs/02.后端技术/00.Linux/01.流量复制技术-tcpcopy.md
@@ -17,7 +17,7 @@ author:
 ## 一、简介
 * 背景：线上流量过于复杂，难以模拟出真实的请求对线上服务进行测试；
 * TCPCopy 作为一个实时流重放工具，能够生成类似于生产环境的流量；
-* TCPCopy 是<span style="color: red;">**对 tcp 包进行转发，与应用层协议无关**</span>，mysql、redis、protobuf等都可以转发；
+* TCPCopy 是<span style="color: red;">**对 tcp 包进行转发，与应用层协议无关**</span>，mysql、redis、http等都可以转发；
 * TCPCopy 除了<span style="color: red;">**占用额外的 CPU、内存和带宽外**</span>，对生产系统几乎没有影响；
 * 复制工作负载在请求多样性、网络延迟和资源占用方面与生产工作负载相似。
 
@@ -133,7 +133,8 @@ route add -net 62.135.200.0 netmask 255.255.255.0 gw 61.135.233.161
 # 将这些数据包发送到目标服务器 ”61.135.233.160“ 的 ”8080“
 # 连接辅助服务器 “61.135.233.161”，将响应数据包传递给 intercept
 # ”-c" 参数是可选的，设置它是为了简化路由命令
-./tcpcopy -x 80-61.135.233.160:8080 -s 61.135.233.161 -c 62.135.200.x
+# 流量复制比例为 2 倍
+./tcpcopy -x 80-61.135.233.160:8080 -s 61.135.233.161 -c 62.135.200.x -n 2
 ```
 
 ## 六、注意事项
@@ -144,6 +145,7 @@ route add -net 62.135.200.0 netmask 255.255.255.0 gw 61.135.233.161
 * TCPCopy 不支持使用 `SSL/TLS` 的服务器应用程序的重放；
 * 有关 MySQL 会话重播，请参阅 https://github.com/session-replay-tools；
 * 不应该辅助服务器上设置 `ip_forward` 为 true，否则无法充当黑洞；
+* <span style="color: red;">**brpc，grpc等框架是基于 http2 协议的，http2 在网络层存在队头阻塞的问题，会存在较多的**</span>；
 
 ## 七、可能存在的问题
 ### 1，捕获接口
