--- a/docs/02.后端技术/00.Linux/01.流量复制技术-tcpcopy.md
+++ b/docs/02.后端技术/00.Linux/01.流量复制技术-tcpcopy.md
@@ -145,7 +145,7 @@ route add -net 62.135.200.0 netmask 255.255.255.0 gw 61.135.233.161
 * TCPCopy 不支持使用 `SSL/TLS` 的服务器应用程序的重放；
 * 有关 MySQL 会话重播，请参阅 https://github.com/session-replay-tools；
 * 不应该辅助服务器上设置 `ip_forward` 为 true，否则无法充当黑洞；
-* <span style="color: red;">**brpc，grpc等框架是基于 http2 协议的，http2 在网络层存在队头阻塞的问题，会存在较多的**</span>；
+<!-- * <span style="color: red;">**brpc，grpc等框架是基于 http2 协议的，http2 在网络层存在队头阻塞的问题，会存在较多的**</span>； -->
 
 ## 七、可能存在的问题
 ### 1，捕获接口
@@ -174,3 +174,7 @@ route add -net 62.135.200.0 netmask 255.255.255.0 gw 61.135.233.161
 * 目标服务器上的服务可能无法及时处理所有请求；
 * 一方面，服务中的错误可能会使请求长时间没有响应；
 * 另一方面，TCP 层以上的某些协议可能只处理套接字缓冲区中的第一个请求，而将套接字缓冲区中的剩余请求保留为未处理；
+  
+>**参考文章**<br>
+> [1] [https://github.com/session-replay-tools/tcpcopy](https://github.com/session-replay-tools/tcpcopy)<br>
+> [2] [https://cloud.tencent.com/developer/article/1537496](https://cloud.tencent.com/developer/article/1537496)<br>
