--- a/docs/02.后端技术/05.Consul/03.Consul返回结果介绍.md
+++ b/docs/02.后端技术/05.Consul/03.Consul返回结果介绍.md
@@ -11,7 +11,7 @@ author:
   name: erlangtui
   link: https://github.com/zhangliang6666
 ---
-:::info
+::: note
 在Consul中，返回结果中的Node、Service和Checks是不同概念的：
 
 1. Node（节点）：Node表示Consul集群中的一个成员节点。每个节点都具有唯一标识符和相关元数据信息，例如节点名称、IP地址、数据中心等。Node可以是物理主机、虚拟机或容器等。
