--- a/docs/02.后端技术/05.Consul/01.Consul常用的API.md
+++ b/docs/02.后端技术/05.Consul/01.Consul常用的API.md
@@ -25,7 +25,7 @@ author:
 ## 二、API 具体用法
 ### 1，Agent API
 ```sh
-# 检索主机信息
+# 检索主机信息，包括内存、CPU、主机、磁盘信息
 curl --location --request GET 'http://127.0.0.1:8500/v1/agent/host'
 # 列出主机成员
 curl --location --request GET 'http://127.0.0.1:8500/v1/agent/members'
@@ -33,11 +33,7 @@ curl --location --request GET 'http://127.0.0.1:8500/v1/agent/members'
 curl --location --request GET 'http://127.0.0.1:8500/v1/agent/self'
 # 重启代理
 curl --location --request PUT '/v1/agent/reload'
-# 启用维护模式
-curl --location --request PUT '/v1/agent/maintenance'
-# 查看指标
-curl --location --request GET 'http://127.0.0.1:8500/v1/agent/metrics'
-# 查看指标
+# 查看指标，包括仪表盘、点、计数、样本指标
 curl --location --request GET 'http://127.0.0.1:8500/v1/agent/metrics' 
 # 查看流日志
 curl --location --request GET 'http://127.0.0.1:8500/v1/agent/monitor'
@@ -55,63 +51,24 @@ curl --location --request GET 'http://127.0.0.1:8500/v1/agent/service/:service_i
 curl --location --request GET 'http://127.0.0.1:8500/v1/agent/health/service/name/:service_name'
 # 按id检索本地代理上的聚合服务状态
 curl --location --request GET 'http://127.0.0.1:8500/v1/agent/health/service/id/:service_id'
-# 向本地代理注册服务
-curl --location --request PUT 'http://127.0.0.1:8500/v1/agent/service/register' --header 'Content-Type: application/json'
-# 从本地代理解注册服务
-curl --location --request PUT 'http://127.0.0.1:8500/v1/agent/service/deregister/:service_id'
-```
-
-
-| **方法** | **路径** | **功能** | **协议** | **参数** |
-| --- | --- | --- | --- | --- |
-| GET | /v1/agent/host | 检索主机信息 | application/json |  |
-| GET | /v1/agent/members | 列出主机成员 | application/json |  |
-| GET | /v1/agent/self | 读取主机的配置 | application/json |  |
-| PUT | /v1/agent/reload | 重启代理 | application/json | |
-| PUT | /v1/agent/maintenance | 启用维护模式 | application/json | enable=true&reason="原因" |
-| GET | /v1/agent/metrics | 查看指标 | application/json |  |
-| GET | /v1/agent/metrics | 查看指标 | text/plain; version=0.0.4; charset=utf-8 | format=prometheus |
-| GET | /v1/agent/monitor | 查看流日志 | application/json |  |
-| PUT | /v1/agent/join/:address | 加入代理集群 | application/json |  |
-| PUT | /v1/agent/leave | 离开代理集群 | application/json |  |
-| GET | /v1/agent/check | 返回注册的所有检查 | application/json |  |
-| GET | /v1/agent/services | <span style="color: red;">返回向本地代理注册的所有服务</span> | application/json |  |
-| GET | /v1/agent/service/:service_id | <span style="color: red;">获取单个服务实例的完整服务定义</span> | application/json |  |
-| GET | /v1/agent/health/service/name/:service_name | <span style="color: red;">按**名称**检索本地代理上的聚合服务状态</span> | application/json |  |
-| GET | /v1/agent/health/service/id/:service_id | <span style="color: red;">按**id**检索本地代理上的聚合服务状态</span> | application/json |  |
-| PUT | /v1/agent/service/register | <span style="color: red;">向本地代理注册服务</span> | application/json | **register**注册信息|
-| PUT | /v1/agent/service/deregister/:service_id | <span style="color: red;">从本地代理解注册服务</span> | application/json |  |
-
-```json
-{
-  "ID": "redis1",
-  "Name": "redis",
-  "Tags": ["primary", "v1"],
-  "Address": "127.0.0.1",
-  "Port": 8000,
-  "Meta": {
-    "redis_version": "4.0"
-  },
-  "EnableTagOverride": false,
-  "Check": {
-    "DeregisterCriticalServiceAfter": "90m",
-    "Args": ["/usr/local/bin/check_redis.py"],
-    "Interval": "10s",
-    "Timeout": "5s"
-  },
-  "Weights": {
-    "Passing": 10,
-    "Warning": 1
-  }
-}
+# 重要，从本地代理解注册服务
+curl --location --request PUT 'http://127.0.0.1:8500/v1/agent/service/deregister/:service_id' -H "X-Consul-Token: b8fc-a1d6-4d8a-68a8-9a71"
+# 重要，向本地代理注册服务
+curl --location --request PUT 'http://127.0.0.1:8500/v1/agent/service/register' -H "X-Consul-Token: b8fc-a1d6-4d8a-68a8-9a71" --header 'Content-Type: application/json' --data '{"ID":"redis1","Name":"redis","Tags":["primary","v1"],"Address":"127.0.0.1","Port":8000,"Meta":{"redis_version":"4.0"},"EnableTagOverride":false,"Check":{"DeregisterCriticalServiceAfter":"90m","Args":["/usr/local/bin/check_redis.py"],"Interval":"10s","Timeout":"5s"},"Weights":{"Passing":10,"Warning":1}}'
 ```
 ### 2，Health API
-| **方法** | **路径** | **功能** | **协议** | **参数** |
-| --- | --- | --- | --- | --- |
-| GET | /v1/health/node/:node | 返回特定于路径上提供的节点的检查 | application/json | 指定要查询的节点的名称或 ID |
-| GET | /v1/health/checks/:service | 返回提供的服务的检查 | application/json |  |
-| GET | **/v1/health/service/:service** | 返回提供的服务的服务实例 | application/json |  |
-| GET | /v1/health/connect/:service | 返回启用连接的服务的服务实例 | application/json | |
-| GET | /v1/health/state/:state | 返回状态中的检查 | application/json | state: any,passing, warning,critical |
+```sh
 
+# 返回特定于节点的检查
+curl --location --request GET 'http://127.0.0.1:8500/v1/health/node/:node'
+# 返回提供服务的检查
+curl --location --request GET 'http://127.0.0.1:8500/v1/health/checks/:service'
+# 返回提供服务的服务实例
+curl --location --request GET 'http://127.0.0.1:8500/v1/health/service/:service'
+# 返回启用连接服务的服务实例
+curl --location --request GET 'http://127.0.0.1:8500/v1/health/connect/:service'
+# 返回状态中的检查，state: any,passing, warning,critical
+curl --location --request GET 'http://127.0.0.1:8500/v1/health/state/:state'
 
+```
+> 未完待续……
