--- a/docs/00.目录页/01.语言.md
+++ b/docs/00.目录页/01.语言.md
@@ -14,5 +14,5 @@ comment: false
 editLink: false
 author:
   name: erlangtui
-  link: https://github.com/zhangliang6666
+  link: https://github.com/erlangtui
 ---
