--- a/docs/01.语言/02.C++/00.C++的基本介绍.md
+++ b/docs/01.语言/02.C++/00.C++的基本介绍.md
@@ -9,7 +9,7 @@ tags:
   - C++
 author: 
   name: erlangtui
-  link: https://github.com/zhangliang6666
+  link: https://github.com/erlangtui
 ---
 
 ## 一、C++的发展
