--- a/docs/01.语言/02.C++/101.编译与调试/02.GDB.md
+++ b/docs/01.语言/02.C++/101.编译与调试/02.GDB.md
@@ -10,7 +10,7 @@ tags:
   - 
 author: 
   name: erlangtui
-  link: https://github.com/zhangliang6666
+  link: https://github.com/erlangtui
 ---
 
 ## 一、GDB 介绍
