--- a/docs/01.语言/02.C++/103.第三方库/03.gflags 介绍.md
+++ b/docs/01.语言/02.C++/103.第三方库/03.gflags 介绍.md
@@ -12,7 +12,7 @@ tags:
   - gflags
 author: 
   name: erlangtui
-  link: https://github.com/zhangliang6666
+  link: https://github.com/erlangtui
 ---
 
 ## 一、基本介绍
