--- a/docs/01.语言/04.Shell/00.Shell的基本介绍.md
+++ b/docs/01.语言/04.Shell/00.Shell的基本介绍.md
@@ -9,7 +9,7 @@ tags:
   - Shell
 author: 
   name: erlangtui
-  link: https://github.com/zhangliang6666
+  link: https://github.com/erlangtui
 ---
 
 ## 一、shell解释器类型
