--- a/docs/01.语言/04.Shell/03.vim/00.vim 插件的管理与安装.md
+++ b/docs/01.语言/04.Shell/03.vim/00.vim 插件的管理与安装.md
@@ -11,7 +11,7 @@ tags:
   - vim
 author: 
   name: erlangtui
-  link: https://github.com/zhangliang6666
+  link: https://github.com/erlangtui
 ---
 
 ## 一、vim 常用插件管理工具
