--- a/docs/01.语言/04.Shell/03.vim/01.NERDTree插件.md
+++ b/docs/01.语言/04.Shell/03.vim/01.NERDTree插件.md
@@ -11,7 +11,7 @@ tags:
   - 
 author: 
   name: erlangtui
-  link: https://github.com/zhangliang6666
+  link: https://github.com/erlangtui
 ---
 * NERDTree 是 Vim 编辑器的文件系统浏览器。使用此插件，用户可以直观地浏览复杂的目录层次结构，快速打开文件进行读取或编辑，并执行基本的文件系统操作。
 <!-- more -->
