--- a/docs/02.后端技术/05.Consul/00.Consul的基本介绍.md
+++ b/docs/02.后端技术/05.Consul/00.Consul的基本介绍.md
@@ -9,7 +9,7 @@ tags:
   - 
 author: 
   name: erlangtui
-  link: https://github.com/zhangliang6666
+  link: https://github.com/erlangtui
 ---
 一、什么是服务发现
 微服务的框架体系中，服务发现是不能不提的一个模块。我相信了解或者熟悉微服务的童鞋应该都知道它的重要性。这里我只是简单的提一下，毕竟这不是我们的重点。我们看下面的一幅图片：
