--- a/docs/02.后端技术/05.Consul/01.Consul常用的API.md
+++ b/docs/02.后端技术/05.Consul/01.Consul常用的API.md
@@ -9,7 +9,7 @@ tags:
   - 
 author: 
   name: erlangtui
-  link: https://github.com/zhangliang6666
+  link: https://github.com/erlangtui
 ---
 ## 一、API 分类
 :::warning
