--- a/docs/02.后端技术/05.Consul/03.Consul返回结果介绍.md
+++ b/docs/02.后端技术/05.Consul/03.Consul返回结果介绍.md
@@ -9,7 +9,7 @@ tags:
   - 
 author: 
   name: erlangtui
-  link: https://github.com/zhangliang6666
+  link: https://github.com/erlangtui
 ---
 ::: note
 在Consul中，返回结果中的Node、Service和Checks是不同概念的：
