--- a/docs/05.更多/03.面试问题集锦.md
+++ b/docs/05.更多/03.面试问题集锦.md
@@ -8,7 +8,7 @@ tags:
   - 
 author: 
   name: erlangtui
-  link: https://github.com/zhangliang6666
+  link: https://github.com/erlangtui
 ---
 
 # 面试问题集锦
