--- a/docs/00.目录页/02.后端技术.md
+++ b/docs/00.目录页/02.后端技术.md
@@ -14,5 +14,5 @@ comment: false
 editLink: false
 author:
   name: 二郎腿
-  link: https://github.com/zhangliang6666
+  link: https://github.com/erlangtui
 ---
