--- a/docs/01.语言/02.C++/103.第三方库/01.brpc的基本介绍.md
+++ b/docs/01.语言/02.C++/103.第三方库/01.brpc的基本介绍.md
@@ -10,7 +10,7 @@ tags:
   - brpc
 author: 
   name: erlangtui
-  link: https://github.com/zhangliang6666
+  link: https://github.com/erlangtui
 ---
 
 ## 一、简单介绍
