--- a/docs/02.后端技术/00.Linux/00.Linux不常用但重要的命令.md
+++ b/docs/02.后端技术/00.Linux/00.Linux不常用但重要的命令.md
@@ -10,7 +10,7 @@ tags:
   - linux命令
 author: 
   name: erlangtui
-  link: https://github.com/zhangliang6666
+  link: https://github.com/erlangtui
 ---
 
 ## 一、磁盘相关
