--- a/docs/06.关于/01.关于我.md
+++ b/docs/06.关于/01.关于我.md
@@ -6,7 +6,7 @@ sidebar: false
 article: false
 author: 
   name: erlangtui
-  link: https://github.com/zhangliang6666
+  link: https://github.com/erlangtui
 ---
 
 :::tip
