--- a/docs/01.语言/02.C++/02.C++多态.md
+++ b/docs/01.语言/02.C++/02.C++多态.md
@@ -1,5 +1,5 @@
 ---
-title: 虚函数表
+title: C++多态
 date: 2023-08-22 21:25:27
 permalink: /pages/7ff72e/
 categories:
@@ -11,6 +11,16 @@ author:
   name: erlangtui
   link: https://github.com/erlangtui
 ---
+
+## 一、虚函数
+
+## 二、虚析构
+
+## 三、多态
+
+## 四、虚继承
+
+## 五、虚表指针
 
 虚函数表（Virtual Function Table），简称为 vtable，是C++中实现多态性（polymorphism）的关键机制之一。
 
