--- a/docs/01.语言/02.C++/101.编译与调试/03.cmake.md
+++ b/docs/01.语言/02.C++/101.编译与调试/03.cmake.md
@@ -1,5 +1,5 @@
 ---
-title: cmake
+title: CMake
 date: 2023-08-06 13:24:49
 permalink: /pages/69916b/
 categories:
@@ -12,8 +12,8 @@ author:
   name: erlangtui
   link: https://github.com/erlangtui
 ---
-## 一、cmake介绍
-### 1，cmake概述
+## 一、CMake介绍
+### 1，CMake概述
 * CMake 是一个开源的**跨平台**工具系列，旨在构建、测试和打包软件；
 * CMake 使用与平台、编译器独立的简单配置文件，来控制软件编译过程，并生成**当前编译环境**的 Makefile 文件；
 * Makefile 通常依赖于当前的编译平台，手写 Makefile 的工作量比较大，解决依赖关系时也容易出错；
