--- a/docs/02.后端技术/00.Linux/00.Linux不常用但重要的命令.md
+++ b/docs/02.后端技术/00.Linux/00.Linux不常用但重要的命令.md
@@ -2,7 +2,7 @@
 title: Linux不常用但重要的命令
 date: 2023-07-15 13:35:14
 permalink: /pages/1dfdd1/
-titleTag: 原创
+# titleTag: 原创
 categories:
   - 后端技术
   - Linux
