--- a/docs/01.语言/02.C++/103.第三方库/03.gflags 介绍.md
+++ b/docs/01.语言/02.C++/103.第三方库/03.gflags 介绍.md
@@ -2,8 +2,8 @@
 title: gflags 介绍
 date: 2023-08-03 21:12:49
 permalink: /pages/d12608/
-titleTag: 原创
-sticky: 2
+# titleTag: 原创
+# sticky: 2
 categories:
   - 语言
   - C++
