--- a/docs/01.语言/02.C++/02.C++多态.md
+++ b/docs/01.语言/02.C++/02.C++多态.md
@@ -33,3 +33,6 @@ author:
 对于每个派生类，虚函数表的结构是相似的，但其中的函数指针被替换为派生类中的具体函数。这就允许了在继承关系中进行动态绑定，使得程序能够根据实际对象的类型来调用相应的函数。
 
 总结一下，虚函数表是C++中用于支持多态性的一种机制。它是存储着指向虚函数的指针数组，允许通过基类指针或引用来调用派生类中实现的虚函数，从而实现动态绑定和运行时多态性。
+
+动态联编 ： 首先需要取到对象的首地址，然后再解引用取到虚函数表的首地址后，再加上偏移量才能找到要调的虚函数，然后call调用。
+静态联编：
