--- a/docs/01.语言/02.C++/101.编译与调试/01.gcc与g++.md
+++ b/docs/01.语言/02.C++/101.编译与调试/01.gcc与g++.md
@@ -99,13 +99,18 @@ author:
 ### 7，其他选项
 |选项|功能|
 |---|---|
--fPIC（Full PIC）| （PIC，position-independent code）要求编译器生成完全位置无关的代码。生成的目标文件可以在任何内存位置加载并执行，适用于静态库的编译，这种选项生成的代码较大，但具有更好的移植性和可重用性
--fpic（Partial PIC）| 类似于-fPIC，但生成的代码相对更小，对移植性和可重用性也稍微弱一些，这个选项适用于动态共享库的编译，因为共享库的代码相对较小，并且在加载时可以使用更多可用的地址空间
--ansi|使用ANSI 标准，禁止GNU 标准特性，如 asm inline typeof 关键字，以及UNIX、vax等预处理宏。
--funsigned-char|将程序中的char解析为unsigned char
--fno-signed-char|将程序中的char解析为非signed char
--fsigned-char|将程序中的char解析为signed char
--fno-unsigned-char|将程序中的char解析为非unsigned char
--O0，-O1，-O2，-O3|英文单词Optimize的第一个字母O（意为：优化），编译器的优化选项的4个级别，-O0表示没有优化,-O1为缺省值，-O3优化级别最高，优化的是生成的程序的大小和程序的执行速度
+-fPIC（Full PIC）           | （position-independent code）要求编译器生成完全位置无关的代码。生成的目标文件可以在任何内存位置加载并执行，以便可以将目标文件在不同的地址空间中加载，适用于静态库的编译，这种选项生成的代码较大，但具有更好的移植性和可重用性
+-fpic（Partial PIC）        | 类似于-fPIC，但生成的代码相对更小，对移植性和可重用性也稍微弱一些，但是只需要保证生成的代码在同一进程内可用，不需要支持跨进程共享，这个选项适用于动态共享库的编译，因为共享库的代码相对较小，并且在加载时可以使用更多可用的地址空间
+-fno-strict-aliasing       | 禁用严格别名规则优化。它告诉编译器不要依赖严格别名规则进行优化，可以避免因别名规则优化而引发的问题。
+-fomit-frame-pointer       |  忽略函数调用时的帧指针。这个选项用于告诉编译器，可以省略函数调用时保存和恢复栈帧指针的操作，以节省额外的指令和寄存器。
+-finline-functions         |  启用内联函数。编译器会尝试将函数调用处直接替换为函数体的代码，以减少函数调用的开销。
+-fno-stack-protector       |  禁用堆栈保护。这个选项用于禁用编译器在函数中自动生成的堆栈保护代码，以减少生成的代码大小和执行开销。
+-fsanitize=address         |  启用地址检测工具。这个选项用于在编译和运行时检测内存访问错误，例如使用未初始化的内存或越界访问。
+-funsigned-char            |  将程序中的char解析为unsigned char
+-fno-signed-char           |  将程序中的char解析为非signed char
+-fsigned-char              |  将程序中的char解析为signed char
+-fno-unsigned-char         |  将程序中的char解析为非unsigned char
+-ansi                      |  使用ANSI 标准，禁止GNU 标准特性，如 asm inline typeof 关键字，以及UNIX、vax等预处理宏。
+-O0，-O1，-O2，-O3          |  英文单词Optimize的第一个字母O（意为：优化），编译器的优化选项的4个级别，-O0表示没有优化,-O1为缺省值，-O3优化级别最高，优化的是生成的程序的大小和程序的执行速度
 
  
