--- a/docs/01.语言/02.C++/01.C++构造函数.md
+++ b/docs/01.语言/02.C++/01.C++构造函数.md
@@ -12,8 +12,74 @@ author:
   link: https://github.com/erlangtui
 ---
 
+```cpp
+class MyClass {
+public:
+    // 默认构造函数
+    MyClass() : data(nullptr), size(0) {}
+
+    // 带参数的构造函数
+    MyClass(int* newData, int newSize) : size(newSize) {
+        data = new int[size];
+        for (int i = 0; i < size; i++) {
+            data[i] = newData[i];
+        }
+    }
+
+    // 拷贝构造函数
+    MyClass(const MyClass& other) : size(other.size) {
+        data = new int[size];
+        for (int i = 0; i < size; i++) {
+            data[i] = other.data[i];
+        }
+    }
+
+    // 移动构造函数
+    MyClass(MyClass&& other) noexcept : data(other.data), size(other.size) {
+        other.data = nullptr;
+        other.size = 0;
+    }
+
+    // 拷贝赋值函数
+    MyClass& operator=(const MyClass& other) {
+        if (this != &other) {
+            delete[] data;
+            size = other.size;
+            data = new int[size];
+            for (int i = 0; i < size; i++) {
+                data[i] = other.data[i];
+            }
+        }
+        return *this;
+    }
+
+    // 移动赋值函数
+    MyClass& operator=(MyClass&& other) noexcept {
+        if (this != &other) {
+            delete[] data;
+            data = other.data;
+            size = other.size;
+            other.data = nullptr;
+            other.size = 0;
+        }
+        return *this;
+    }
+
+    ~MyClass() {
+        delete[] data;
+    }
+
+private:
+    int* data;
+    int size;
+};
+
+```
 
 ## 一、默认构造函数
+* 默认构造函数（Default Constructor）：默认构造函数没有参数，用于创建对象时不提供任何初始值。
+* 它可以使用默认值或者对成员变量执行适当的初始化操作。**如果没有显式定义构造函数，则编译器会为类生成一个默认构造函数**。
+
 
 ## 二、拷贝构造函数
 
@@ -22,3 +88,20 @@ author:
 ## 四、拷贝复制函数
 
 ## 五、移动复制函数
+
+当你创建一个类时，可以定义不同类型的构造函数来初始化对象的属性和状态。以下是几种常见的构造函数类型的介绍：
+
+1. 
+2. 带参数构造函数（Parameterized Constructor）：带参数构造函数接受一个或多个参数，并使用这些参数来初始化对象的成员变量。它可以根据传入的参数执行特定的初始化操作，以定制化地创建对象。
+
+3. 拷贝构造函数（Copy Constructor）：拷贝构造函数用于创建新对象，该对象是以现有对象作为参数进行复制而来的。它通过将一个对象的值复制到另一个新对象中来创建副本。通常情况下，拷贝构造函数的参数是一个同类的引用或常量引用。
+
+4. 移动构造函数（Move Constructor）：移动构造函数用于创建新对象，该对象获取了临时对象的资源所有权。移动构造函数通过从源对象“移动”数据，而不是复制数据，来创建新对象。移动构造函数通常通过右值引用作为参数来实现高效的资源转移。
+
+5. 拷贝赋值函数（Copy Assignment Operator）：拷贝赋值函数用于将一个对象的值复制给另一个已存在的对象。通过重载赋值操作符（`=`），它允许对象之间进行赋值操作。通常情况下，拷贝赋值函数的参数是一个同类的引用或常量引用。
+
+6. 移动赋值函数（Move Assignment Operator）：移动赋值函数用于将一个对象的临时值转移到另一个已存在的对象中。通过重载赋值操作符（`=`）和右值引用参数，它允许对象之间进行资源的高效转移。
+
+这些构造函数和赋值函数的定义和实现可以根据类的需求来定制。通过合理地使用这些构造函数和赋值函数，可以方便地创建、初始化和复制对象，并进行有效的资源管理和转移。
+
+默认构造函数、带参数构造函数、拷贝构造函数、移动构造函数、拷贝复制函数、移动复制函数
